--- a/src/app/components/posts/post-create/post-create.component.html
+++ b/src/app/components/posts/post-create/post-create.component.html
@@ -1,6 +1,6 @@
 <section id="viewSubmit">
   <div class="submitArea">
-    <h1>Submit Link</h1>
+    <h1>Submit Discussions</h1>
     <p>Please, fill out the form. A thumbnail image is not required.</p>
   </div>
   <div class="submitArea formContainer">
@@ -10,7 +10,7 @@
       <label>Link Title:</label>
       <input required name="title" ngModel type="text">
       <label>Link Thumbnail Image (optional):</label>
-      <input required name="imageUrl" ngModel type="text">
+      <input  name="imageUrl" ngModel type="text">
       <label>Description (optional):</label>
       <textarea name="description" ngModel></textarea>
       <input id="btnSubmitPost" [disabled]="f.invalid" value="Submit" type="submit">
