--- a/src/app/components/posts/post-details/post-details.component.css
+++ b/src/app/components/posts/post-details/post-details.component.css
@@ -9,6 +9,13 @@
   clear: both;
 }
 
+.post button{
+  text-align: center;
+  background-color: #fffffff2;
+  padding: 4px;
+  transform: skew(-16deg);
+  text-decoration: none;
+}
 .col {
   float: left;
   display: inline-block;
@@ -114,8 +121,26 @@
 }
 
 #commentForm>textarea {
-  resize: none;
-  height: 6em;
+    width: 500px;
+    height: 100px;
+    -moz-border-bottom-colors: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    background: none repeat scroll rgba(255, 255, 255);
+    border-color: -moz-use-text-color #FFFFFF #FFFFFF -moz-use-text-color;
+    border-image: none;
+    border-radius: 6px 6px 6px 6px;
+    border-style: none solid solid none;
+    border-width: medium 1px 1px medium;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
+    color: #000000;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 1em;
+    line-height: 1.4em;
+    padding: 5px 8px;
+    transition: background-color 0.2s ease 0s;
+
 }
 
 #commentForm>input[type="submit"] {
