--- a/src/app/components/posts/post-details/post-details.component.html
+++ b/src/app/components/posts/post-details/post-details.component.html
@@ -1,55 +1,13 @@
 <section id="viewComments">
-  <ng-template [ngIf]="post">
-    <article class="post">
-      <div class="col rank">
-        <span>{{post['_kmd']['lmt'] | date}}</span>
-      </div>
-      <div class="col thumbnail">
-        <a href="{{post['url']}}">
-          <img src="{{post['imageUrl']}}">
-        </a>
-      </div>
-      <div class="post-content">
-        <div class="title">
-          <a href="{{post['url']}}">
-            {{post['title']}}
-          </a>
-        </div>
-        <div class="details">
-          <p>{{post['description']}}</p>
-          <div class="info">
-            Posted by {{post['author']}}
-          </div>
-          <div class="controls">
-            <ul>
-              <li *ngIf='!comments' class="action"><a [routerLink]="[ '/posts/details', post['_id'] ]" class="commentsLink">comments</a>
-              </li>
-              <ng-template [ngIf]="isAuthor(post)">
-                <li class="action"><a [routerLink]="[ '/posts/edit', post['_id'] ]" href="#">edit</a></li>
-                <li class="action"><button (click)="deletePost(post['_id'])">delete</button></li>
-              </ng-template>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </article>
-  </ng-template>
+
+  <app-post-info *ngIf="(post$ | async) as post" [post]="post" [desc]="post.description">
+  </app-post-info>
+
   <div class="post post-content">
-    <form #f="ngForm" (ngSubmit)="postComment()" id="commentForm">
-      <label>Comment</label>
-      <textarea required ngModel name="content" type="text"></textarea>
-      <input type="submit" [disabled]="f.invalid" value="Add Comment" id="btnPostComment">
-    </form>
+    <app-comment-create *ngIf="(post$ | async) as post" [postId]="post._id" (postComentEmitter)="postComment($event)">
+    </app-comment-create>
   </div>
-  <ng-template [ngIf]="comments">
-    <article *ngFor="let commentInfo of comments" class="post post-content">
-      <p>{{commentInfo['content']}}</p>
-      <div class="info">
-        submitted by {{commentInfo['author']}} |
-        <button *ngIf="isAuthor(commentInfo)" (click)="deleteComment(commentInfo['_id'])" class="deleteLink">
-          delete
-        </button>
-      </div>
-    </article>
-  </ng-template>
+    <app-comment-info *ngFor="let commentInfo of (comments$ | async)" [commentInfo]='commentInfo'
+    (deleteCommentEmitter)="deleteComment($event)">
+    </app-comment-info>
 </section>
