--- a/src/app/components/posts/post-list/post-list.component.html
+++ b/src/app/components/posts/post-list/post-list.component.html
@@ -1,40 +1,10 @@
 <section id="viewCatalog">
   <div class="posts">
-    <ng-template [ngIf]="allPosts">
-      <article *ngFor="let post of allPosts; let i = index;" class="post">
-        <div class="col rank">
-          <span>{{post['_kmd']['lmt'] | date}}</span>
-        </div>
-        <div class="col thumbnail">
-          <a [routerLink]="[ '/posts/details', post['_id'] ]">
-            <img src="{{post['imageUrl']}}">
-          </a>
-        </div>
-        <div  class="post-content">
-          <div class="title">
-            <a  [routerLink]="[ '/posts/details', post['_id'] ]" >
-              {{post['title']}}
-              
-            </a>
-          </div>
-          <div class="details">
-            <div class="info">
-              Posted by {{post['author']}}
-            </div>
-            <div class="controls">
-              <ul>
-                <li class="action"><a [routerLink]="[ '/posts/details', post['_id'] ]" class="commentsLink">comments</a>
-                </li>
-                <ng-template [ngIf]="isAuthor(post)">
-                  <li class="action"><a [routerLink]="[ '/posts/edit', post['_id'] ]" href="#">edit</a></li>
-                  <li class="action"><button (click)="onDeletePost(post['_id'])">delete</button></li>
-                </ng-template>
-              </ul>
-            </div>
-
-          </div>
-        </div>
-      </article>
-    </ng-template>
+      <app-post-info 
+      *ngFor="let post of allPosts$ | async"
+      [post]="post"
+      class="post"
+      >
+  </app-post-info>
   </div>
 </section>
