--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,7 +1,7 @@
 
 <header>
-    <span class="logo"></span><a class="header" *ngIf="isLoggedIn"  [routerLink]="[ '/posts' ]" >AbautWarframe</a>
-    <a class="header" *ngIf="!isLoggedIn"  [routerLink]="[ '/home' ]" >AbautWarframe</a>
+    <span class="logo"></span><a class="header" *ngIf="isLoggedIn"  [routerLink]="[ '/posts' ]" >AboutWarframe</a>
+    <a class="header" *ngIf="!isLoggedIn"  [routerLink]="[ '/home' ]" >AboutWarframe</a>
       <ng-template [ngIf]="!isLoggedIn">
         <a class="nav" [routerLink]="[ '/login' ]">Login</a>
         <a class="nav" [routerLink]="[ '/register' ]">Register</a>
