admin verification and canActivate

--- a/src/app/components/authentication/register/register.component.html
+++ b/src/app/components/authentication/register/register.component.html
@@ -4,12 +4,21 @@
       <form #f="ngForm" (ngSubmit)="register()" id="registerForm">
         <div>
             <p>Register</p>
-            <div><p>Username</p>
-              <input required name="username" ngModel type="text"></div>
-            <div> <p>Password</p>
-              <input required name="password" ngModel #pass="ngModel" type="password"></div>
-            <div> <p>Repeat Password</p>
-              <input required name="repeatPass" ngModel #repeatPass="ngModel" type="password"></div>
+            <div>
+              <p>Username</p>
+              <input required name="username" ngModel type="text">
+            </div>
+
+            <div> 
+              <p>Password</p>
+              <input required name="password" ngModel #pass="ngModel" type="password">
+            </div>
+
+            <div>
+               <p>Repeat Password</p>
+              <input required name="repeatPass" ngModel #repeatPass="ngModel" type="password">
+            </div>
+            
             <div *ngIf="pass.value !== repeatPass.value">
               Passwords must match!
             </div>
