--- a/src/app/components/shared/home/home.component.html
+++ b/src/app/components/shared/home/home.component.html
@@ -2,7 +2,7 @@
         <div class="about">
             <h1>Welcome to AboutWarframe</h1>
             <p>
-              Share interesting links and discuss great content. It's what's happening now.
+              Share interesting links and news about Warframe.
             </p>
             <p>Sign in or sign up in a second.</p>
         </div>
